--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 .parallax {
     /* The image used */
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../../assets/banner.jpg");
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0,1) ), url("../../assets/banner.jpg");
   
     /* Set a specific height */
     height: 100%;
@@ -12,12 +12,17 @@
     background-size: cover;
   }
 
+.col-lg-6 {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
 .parallax > .intro {
     margin: auto;
     text-align: center;
     height: 120vh;
     width: 50%;
-    padding-top: 50vh;
+    padding-top: 40vh;
 }
 
 .fade-in {
