--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,171 @@
-<div class="projects">
-    <p>projects works!</p>
+<div class="parallax ">
+    <section class="intro fade-in align-self-center justify-content-center">
+        <hr id="mainHR">
+        <h1>PROJECTS</h1>
+        <hr id="mainHR">
+        <p>LEAD. MOTIVATE. INSPIRE.</p>
+    </section>
+
 </div>
+<div class="projects">
+    <p>As I have mentioned on the home page of my site, I am a committed and proactive full stacks software developer.
+        I have worked on a lot of projects throughout my career - some of them for fun and some of them to make extra cash.
+        On this part of the site, I have listed some of the interesting project I have worked on either as a team or by myself.
+        For started this whole site was coded in angular2+ and I am hosting it on gitlab pages. The email sending part was done in php 
+        and ajax.
+    </p>
+</div>
+
+<div>
+    <section class="skills">
+        <h1>WHAT DO I KNOW?</h1>
+        <hr id="mainHR">
+        <p>Here is a list of stuff I know really well:</p>
+        <ul>
+            <li>Git</li>
+            <li>C and C++</li>
+            <li>Java</li>
+            <li>Python - numpy, pandas, openCV</li>
+            <li>Javascript and Typescript</li>
+            <li>HTML, CSS and Bootstrps</li>
+            <li>Php, ajax and mysql</li>
+            <li>AngularJS and Angular2+</li>
+            <li>NodeJs</li>
+            <li>Oracle sql</li>
+            <li>Cypress and Jest</li>
+            <li>Docker and Kubernates</li>
+            <li>Ionic</li>
+            <li>Android Studio</li>
+            <li>Adobe Photoshop, Lightroom and AfterEffects</li>
+            <li>Robotic Operating System (ROS)</li>
+            <li>Bash</li>
+        </ul>
+    </section>
+</div>
+<div class="leftPic">
+    <section>
+        <div class="row">
+            <div class="col-lg-6">
+                <img src="../../assets/pic01.jpg" class="img-fluid" id ="pic01">
+            </div>
+            <div class="col-lg-6 highSchoolLife align-self-center justify-content-center">
+                <h1>WHAT DO I DO AT INVESTEC?</h1>
+                <p>
+                    For the past year, I have been part of one of the most skilled teams in my department and met some of the greatest minds at Investec.<br><br>
+                    In terms of my job, we mostly work on community-based apps which we use mostly Angularjs for our frontend and angular 7 for our new stuff. For context, we have apps that a specific audience mainly logins into and we push new features in our apps by adding new components or updating existing ones. For our backend, we use the softwareAG stack (Bpm, ESB, etc.) but we use Oracle to enable hard deployments as softwareAG has a lot of bottlenecks when comes to that. For version control, we use crossvista and gitlab. For testing, we use Nightwatch. It's really good but sometimes causes a lot of inconsistencies when it comes to testing it uses a lot of ram and fails tests cause of timeouts. Part of the team has started looking into cypress to use an alternative.<br><br>
+                    I have worked on a lot of projects in my time here which include a dry cleaning service that helps the current with querying the status of submitted items for our internal stuff user. For years, this has been done manually and caused inconsistencies in data capturing and lead to items being lost. I was the frontend developer in this project and used Angular 7, CSS and bootstrap 4 to create the frontend. I'm currently working on an info services piece using Angularjs which is used by the ban.
+                </p>
+            </div>
+          </div>
+    </section>
+</div>
+<div class="rightPic">
+    <section>
+        <div class="row">
+            <div class="col-lg-6 highSchoolLife align-self-center justify-content-center">
+                <h1>Cäb</h1>
+                <p>
+                    Cäb is a ride sharing app that I worked on by myself to try and beat companies like uber and taxify in Congo. The idea mostly came from a friend and he owned a couple of taxis and his business was still on its start up phase.<br><br>
+
+                    The app's frontend was built using Android studios for native android devices and I used php, ajax and sql to handle the backend process. For locations, we used google maps api. The app is available in on the playstore <a href="https://play.google.com/store/apps/details?id=com.cab.guest_plxcnd.maps&gl=ZA" target="blank">here</a>
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <img src="../../assets/pic01.jpg" class="img-fluid" id ="pic01">
+            </div>
+          </div>
+    </section>
+</div>
+
+<div class="leftPic">
+    <section>
+        <div class="row">
+            <div class="col-lg-6">
+                <img src="../../assets/pic01.jpg" class="img-fluid" id ="pic01">
+            </div>
+            <div class="col-lg-6 highSchoolLife align-self-center justify-content-center">
+                <h1>DUX App</h1>
+                <p>
+                    Dux is is a people development organisation that offers customised, effective and practical youth development training programmes to high school and tertiary education students with the aim of preparing them with the confidence and skills to enter the workforce as an equipped, elite and employable individual, ready to make an impact in his or her career. More about what we do <a href="duxpd.co.za" target="blank">here</a><br><br>
+                    I am currently developing the Dux app which will help use give kids motivation, enable them to chat to our facilitators and enable them to chat amongst themselves.<br><br>
+                    The app is written in Ionic and it connects directly to our duxpd site which was written in wordpress via the wordpressApi plugIn. The app has a chat side that I am busy building using Socket.io and node. App will be available on the Play and App stores soon.
+                </p>
+            </div>
+          </div>
+    </section>
+</div>
+
+<div class="rightPic">
+    <section>
+        <div class="row">
+            <div class="col-lg-6 highSchoolLife align-self-center justify-content-center">
+                <h1>InnHoues</h1>
+                <p>
+                   <a href="http://innhouse.co.za/" target="">Inn House</a> ( which just rebranded from <a href="http://simplegraphics.co.za">Simple graphics</a>) is a company that my friend and I started that focuses on branding, webdesign and photography for kasi businesses. Over the years we helped kasi business go online, some of our clients are listed on the site. You can read more about it on the site itself.<br><br>
+                   The site was build in Html5, bootstrap and scss with the email part build build in Ajax and php.
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <img src="../../assets/pic01.jpg" class="img-fluid" id ="pic01">
+            </div>
+          </div>
+    </section>
+</div>
+
+<div class="leftPic">
+    <section>
+        <div class="row">
+            
+            <div class="col-lg-6">
+                <img src="../../assets/pic01.jpg" class="img-fluid" id ="pic01">
+            </div>
+            <div class="col-lg-6 highSchoolLife align-self-center justify-content-center">
+                <h1>Robotics, Machine learning and Artificial Intelligence</h1>
+                <p>
+                   Robotics is one of my favorite topics and I have been involved in the field for some time now. In one of my projects, I used ROS, python and openCV to program a Robot hand to write stuff line images on paper. The research paper can be found <a href="#" target="blank">here</a><br><br>
+                My current research involves robocup which is an international joint project to promote (Distributed) Artificial Intelligence, Intelligent Robotics, and related fields. It is an attempt to foster AI and intelligent robotics research by providing a standard problem where wide range of technologies can be integrated and examined. RoboCup chose to use soccer game as a central topic of research, aiming at innovations to be applied for socially significant problems and industries. The ultimate goal of the RoboCup project is By 2050, develop a team of fully autonomous humanoid robot that can win against the human world champion team in soccer! In order for a robot team to actually play a soccer game, various technologies must be incorporated including: autonomous agents, multi-agent collaboration and communication, strategy acquisition, real-time reasoning, robotics, and sensor-fusion. RoboCup is a task for a team of multiple fast-moving robots under a dynamic environment. RoboCup also offers a software platform (soccer server) for research on the software aspects of RoboCup, which is what I am involved in mostly we can't really afford expensive robots for now. You can read more about it at RoboCup.
+                
+                </p>
+            </div>
+          </div>
+    </section>
+</div>
+
+<div class="rightPic">
+    <section>
+        <div class="row">
+            <div class="col-lg-6 highSchoolLife align-self-center justify-content-center">
+                <h1>Rail lab</h1>
+                <p>
+                   I am currently part of the Raillab organisation which has the following three aims:
+                </p>
+                <ol>
+                    <li>To further the state-of-the-art in research into artificially intelligent systems,</li>
+                    <li>To act as a centre of excellence and nexus of activities around AI in Africa,</li>
+                    <li>To benefit society through the application of our work.</li>
+                </ol>  
+                <p>You can read more about it <a href="https://raillab.org" target="blank">here</a></p>
+            </div>
+            <div class="col-lg-6">
+                <img src="../../assets/pic01.jpg" class="img-fluid" id ="pic01">
+            </div>
+          </div>
+    </section>
+</div>
+
+<div class="leftPic">
+    <section>
+        <div class="row">
+            <div class="col-lg-6">
+                <img src="../../assets/pic01.jpg" class="img-fluid" id ="pic01">
+            </div>
+            <div class="col-lg-6 highSchoolLife align-self-center justify-content-center">
+                <h1>Shop With Stylist Nkosi</h1>
+                <p>
+                   <a href="https://phoenixnerd84.gitlab.io/shopwithstylistnkosi" target="blank">Shop with stylist nkosi</a> is an online sneaker shop that I develop using JQuery, HTML5 and css to enable people to buy sneakers online. The backend for this was in sql and node.
+                </p>
+            </div>
+          </div>
+    </section>
+</div>
+
