--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,26 @@
-<div class="contact">
-    <p>contact works!</p>
+<div class="parallax ">
+    <section class="intro fade-in align-self-center justify-content-center">
+        <h1>CONTACT ME</h1>
+        <form>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-md-6">
+                        <input type="name" class="form-control" id="name" placeholder="Name">
+                    </div>
+                    <div class="col-md-6">
+                        <input type="email" class="form-control" id="email" placeholder="Email">
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="subject" class="form-control" id="exampleFormControlInput1" placeholder="Subject">
+            </div>
+            <div class="form-group">
+              <textarea class="form-control" id="message" placeholder="Enter your message here..." rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-danger">Submit</button>
+            <p>*Please not that this service is temporary down, it should be up soon</p>
+        </form>
+    </section>
+
 </div>
