--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -64,8 +64,11 @@
     font-size: 100%;
 }
 
-.leftPic, .rightPic {
+.leftPic {
     background-color: #2e3842;
+}
+.rightPic {
+    background-color: #505393;
 }
 
 .highSchoolLife {
