--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -78,4 +78,4 @@
     font-size: 100%;
 }
 
-ol { color: #f8f8f8; font-family: 'Ubuntu',sans-serif; font-size: 18px; font-weight: 500; line-height: 32px; margin: 0 0 24px; }
+ol, ul { color: #f8f8f8; font-family: 'Ubuntu',sans-serif; font-size: 18px; font-weight: 500; line-height: 32px; margin: 0 0 24px; }
